# migration-framework

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: answers.yaml  orders_demo.yaml  setup_demo_db.py
mcp_configs/: README.md  claude_desktop_config.json.example
migration_framework/: __init__.py  audit_defaults.py  cli.py  conditions.py  config.py  discovery.py  engine.py  hitl.py  mapper.py  mcp_server.py  registry.py  substitution.py
migration_framework/agents/: __init__.py  base.py  mapping_agent.py  orchestrator.py  source_agent.py  target_agent.py  verifier_agent.py
migration_framework/codegen/: __init__.py  base.py  cross_generator.py  pyspark_generator.py  registry.py  snowpark_generator.py  sql_generator.py
migration_framework/connectors/: __init__.py  base.py  dbapi_connector.py  pyspark_connector.py  sqlalchemy_connector.py
migration_framework/skills/: __init__.py  base.py  builtin.py  workflow.py
tests/: test_agents.py  test_cli.py  test_codegen.py  test_conditions.py  test_config.py  test_cross_generator.py  test_engine.py  test_hitl.py  test_joins.py  test_mapper.py  test_mcp_server.py  test_native_connectors.py  test_new_skills.py  test_pyspark_connector.py  test_skills.py  test_substitution.py
